--- a/styles/_variables.css
+++ b/styles/_variables.css
@@ -4,9 +4,9 @@
   --radiusSm: 1rem;
   --borderGlass: 1px solid rgba(51, 51, 51, 0.5);
 
-  --maxWidth: 1600px;
+  --maxWidth: 1370px;
 
   --c-primary: #ff3e3e;
-  --c-primary-acrylic: rgba(255, 255, 255, 0.199);
+  --c-hover-acrylic: rgba(255, 255, 255, 0.199);
   --c-green: #00ffcd;
 }
